# mailnuke

./: .gitignore  CHANGELOG.md  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  run_gmail_delete.sh
backend/: requirements.txt
backend/app/: main.py
backend/app/routes/: cleanup.py  presets.py
backend/engine/: constants.py  main.py  requirements-dev.txt  setup.bat  setup.sh
backend/engine/models/: deletion_result.py
backend/engine/services/: deletion_orchestrator.py  email_deleter.py  gmail_client.py  performance_tracker.py
backend/engine/tests/: conftest.py  test_email_deleter.py  test_models.py  test_performance_tracker.py  test_query_builder.py
backend/engine/utils/: ui.py
docs/plans/: 2026-04-10-mailnuke-mvp-implementation.md  2026-04-10-mailnuke-product-design.md  2026-04-10-test-suite.md
frontend/: package-lock.json  package.json
frontend/src/: auth.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
models/: filter_config.py
services/: query_builder.py
tests/: test_filter_config.py  test_gmail_client.py  test_integration.py  test_orchestrator.py
