[project]
name = "gmail-bulk-delete"
version = "2.0.0"
description = "Ultra-fast Gmail cleanup tool with async processing and smart filtering"
requires-python = ">=3.9"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["services", "models", "constants"]
omit = ["tests/*"]
